--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,4 +14,14 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: clean build --stacktrace
+          arguments: build --stacktrace
+      - name: upload fabric artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: fabric
+          path: fabric/build/libs/*-fabric.jar
+      - name: upload forge artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: forge
+          path: forge/build/libs/*-forge.jar
